--- a/data/Wyverns Lair.wiki
+++ b/data/Wyverns Lair.wiki
@@ -56,4 +56,4 @@ a wet chamber with a small pool of opaque black water with wet rocks surrounding
             -RIGHT "All fear [Asmodeus]."
             -TOP scratched out and is no longer legible
         -a waykeeper must attune to the stone entryway, and paint the entirety of the stones with their own blood to activate. 
-        
+        How to use it is described in [Lexicon of the Hells]
