adding group three notes

--- a/data/Group Three Notes.wiki
+++ b/data/Group Three Notes.wiki
@@ -1234,4 +1234,45 @@ Vin tracks down [Letho] and ask him to join for the attack on [Arabasta]
         -Hooded figure wearing a necklace with a symbol of [Asmodeus]
             -Three inverted triangles arranged in a long triangle
         -Sells [Doot] and the cart to the man for 20 platinum - "WOO HOO!"
-        -The Culstist Fanatic carries [Doot] off to the other cultists of [Ashmadai]               
+        -The Culstist Fanatic carries [Doot] off to the other cultists of [Ashmadai]   
+        
+    Doot was taken to the blooming orchid and purchased by a cultist of [Ashmadai]
+    
+    Alas tracking down doot from the dock, finds the man who he sold doot to, and gives him back his 15 silver
+        - claims he gave the statue to a nice fellow          
+    
+    The group passes by David Coppercap at the brawlers ring     
+        The following people join under these names:
+          - Alas the Assassin
+          - Andre The Ghost Bear
+          - Moon Seer
+          - X Plosive X         
+    Next event is at 5pm tomorrow!    
+        
+    The group continues tracking doot  
+      -tracks him down to the cult of [Ashmadai] house
+      -[Alas] breaks down the door and starts a fight after they claim Doot was not there
+      -[Thia] locates person on Doot and confirms he's in the basement
+      -The group defeats all 8 cultists and interrogates one about what they were doing
+         - revealing the goal to contact [Asmodeus]  
+         -3 cultists die
+         -[Favria] and 3 other cultists are left inside the house, tied up
+      -the group takes [Cael Caemond] as a "Statue" as Doot says
+         - dead in a cart   
+         
+    The group heads to [Leeran]'s
+        -Doot tries to buy the "Pink Diamond" using his "Statue" (cael)
+        -[Leeran] does not accept the body for the diamond
+        
+    [Alas] followed to Leerans after doot and offers 5 Aboleth teeth as a token of good faith 
+    
+    The group heads back to the boat
+    
+    [Briar] reads the [Lexicon of the Hells]
+       - burns the ritual pages
+    [Plosive] reads the Eyes of Newts
+       - gives to Thia
+    
+        
+        
+           
