adding group three notes

--- a/data/Group Three Notes.wiki
+++ b/data/Group Three Notes.wiki
@@ -20,7 +20,7 @@ XXXXXXX  XXXXXXX
 XXXXXXX  XXXXXXX
 XXXXX(August 7th)XX XXXXXXX
 XXXXXXX  XXXXXXX
-XXXXXXX  XXX 
+XXXXXXX  XXXXX 
 
 [Alas] sends a crate to [Dockson] at [Luthadel] taking 7 days to arrive XXXXXX
 
@@ -1261,7 +1261,7 @@ Vin tracks down [Letho] and ask him to join for the attack on [Arabasta]
          - dead in a cart   
          
     The group heads to [Leeran]'s
-        -Doot tries to buy the "Pink Diamond" using his "Statue" (cael)
+        -Doot (Gemothy from Kassassfras) tries to buy the "Pink Diamond" using his "Statue" (cael)
         -[Leeran] does not accept the body for the diamond
         
     [Alas] followed to Leerans after doot and offers 5 Aboleth teeth as a token of good faith 
@@ -1273,6 +1273,28 @@ Vin tracks down [Letho] and ask him to join for the attack on [Arabasta]
     [Plosive] reads the Eyes of Newts
        - gives to Thia
     
-        
-        
-           
+++++Session 54
+    Quinn is on deck with a solemn look, reading the note left behind by [Thia Sianodell], and sending stone
+    
+    [Alas] fails a religion roll, and his necklace becomes a god accidentally, and begins talking with Ethield
+    
+    [Cael Caemond] is left tied up in the lower levels of the ship
+      - Cael accepts 1 gold every 2 days to join up with this group as thier new mercenary "statue"
+      
+    the group at 5pm then goes to the brawlers ring, bringing along cael to cheer doot on
+      - Alas convinces David Coppercap that Thia will not be present and doot is to take her place
+         - doot is strong!
+         -under the name "Doot the Just"  
+         -[Alas] puts 500g wager on himself winning
+         -[Doot] puts 500g wager on himself winning   
+      -"Doot the Just" wins in the brawler ring!
+         -earns 300g and gives the blooming orchid voucher to [Cael Caemond]
+         
+    Doot and Alas go to [Leeran]'s
+      -[Alas] buys a pink diamond for 5000g
+      -[Doot], [Plosive] purchases health potions
+         
+    The group heads back to the boat    
+      -long rest
+      -[Alas] learned celetial and can now understand [Ethield] and (amulet)  
+            
