--- a/data/Leeran.wiki
+++ b/data/Leeran.wiki
@@ -26,7 +26,7 @@ Items for Sale:
             -10g to 500g valued ones
             -Obsidian Shard - 10g
             -Diamond Dust (worth 300g)
-        -Onyx Dog 300g - pg 170 DM  
+        -Onyx Dog 300g - pg 170 DM - purchased by good 
         -Sepentine Owl 250g - pg 170 DM  - purchased by good
         -Fine Parchment - 1s per sheet
           -Ink - 10g per ounce
