--- a/data/Felwithe.wiki
+++ b/data/Felwithe.wiki
@@ -34,7 +34,7 @@ A cabinet with a shattered window door holds many deteriorated lvl 1-3 Wizard sc
 
 A teacher's desk has a level 4 and 5 wizard scroll in it, still legible, roll randomly to select what is found
 -tarnished wand of lightning bolts (pg 211 DM book) can be found in another drawer
-
+-random book from Books of Knowledge pdf
 
 ++++Shop of All Holos
 a structure in a very poor state, as if intentionally vandalized long ago.
