--- a/data/Items of Importance.wiki
+++ b/data/Items of Importance.wiki
@@ -16,7 +16,7 @@ Spell Scroll of Dark Water Containment
     -requires a spell slot lvl 7 to use
     -can be cast as a ritual (10m)
     -concentration indefinite.
-    -Requires to be casted from an establish magic circle, created or prexisting
+    -Requires to be casted from an established magic circle, created or prexisting
     -Description:
         This scroll is attuned to the Ash Mount of [Kunark], when used, ash and sludge mixed in the water will be contained from spreading further into waters based on the distance from the caster to the Ash Mount.
         
