adding group three notes

--- a/data/Alas.wiki
+++ b/data/Alas.wiki
@@ -8,6 +8,9 @@ Autumn elf from the [Feywild]
 Encountered [Dockson] on one of his smuggling runs to [Augsburg] from [Luthadel] and chose to aid him in his efforts of helping the Skaa of [Luthadel]
 
 [Alas] ate the god creator [AkumaFruits]
+awakens another god within his pink diamond named Pink (now Etheild, Amuletta and diamond)  
+          -awakens another within Henry the sentient rock named "Dwayne"
+          -awakens another within [Doot]'s ioun stone named Navi
 
 ++++FORGOTTEN KNOWLEDGE
 Love Interest from the [Feywild], [Libelle] who turned out to be a silver dragon
