--- a/data/Dun Morhen.wiki
+++ b/data/Dun Morhen.wiki
@@ -54,7 +54,8 @@ Darkwater Pond
               -Companions
               -The golden times of [Felwithe] 
     Nifle Vanhivener- claw marks accross the back
-        -Quarter Staff    
+        -Quarter Staff 
+        -Sprig of holly druid arcane focus   
     Varneth-Intense burns and charred flesh
         -Jolly roger flag of the Nightwraith pirates (ghoulish woman's face with hair extending to the edges of the flag)
         -Long Bow
