--- a/data/Group Three Notes.wiki
+++ b/data/Group Three Notes.wiki
@@ -1377,7 +1377,30 @@ Vin tracks down [Letho] and ask him to join for the attack on [Arabasta]
         -the encounter 4 bulettes that attack, the group slays all 4
         -[Alas] attempts to fear one away, but does not succeed to indimidate it away
         
-    EXPERIENCE EARNED TO GIVE: 4 Bulettes were slain              
+    4 Bulettes were slain (exp was given)              
         
-          
-          
+++++SESSION 57
+    the group makes it to the middle ruins
+    [Briar] speaks with the ghost of Feronia Vie
+    the group acquires 
+      - Dark Water Containment scroll
+      - and Roc Training Notebook
+    
+    the group heads for the [Wyverns Lair]
+      -[Doot] and [Alas] stealth through the lair masterfully and 
+        -acquire 3 wyvern eggs
+        -acquire the Boots of Speed and Boots of Elvenkind 
+      -[Briar] flies in the form of an owl and snaggs the Eversmoking bottle
+      -[Plosive] is lead through the dark by [Doot]'s onyx dog to the treasure and acquires the Alchemy Jug
+                 
+    the group goes in together to attack the mistwraith monster      
+      -SLAIN IT
+      
+    go to the ruins to long rest
+      -17200exp awarded
+      -[Alas] identifies the Boots of Speed and Boots of Elvenkind
+      
+      
+      
+      
+        
