adding group three notes

--- a/data/Group Three Notes.wiki
+++ b/data/Group Three Notes.wiki
@@ -1400,6 +1400,31 @@ Vin tracks down [Letho] and ask him to join for the attack on [Arabasta]
       -17200exp awarded
       -[Alas] identifies the Boots of Speed and Boots of Elvenkind
       
+++++SESSION 58
+    The group tracks down an Owl bear around 3am via [Quinn]'s tracking
+      -leads the group to the dark pool of [Dun Morhen]
+      -then back to the wyvern cave where more trinkets are acquired
+      -Dust of Dissapearance found by [Briar]
+      -Oil of Etherealness [Alas]
+    
+    [Doot] goes invisible to steal another wyvern egg 
+      -the magmin that joined Doot to that side of the cave alerted the wyvern
+      -the group dispatches the rest of the wyverns by making 4 flee and knocking out the other two with Drow Poison
+    
+    the group heads back to the ruins to do a short rest and identify two of the trinkets
+      -dust of dissapearance
+      -oil of etherealness
+    
+    the group heads back to the boat
+      -followed by crows cawing for a free meal as they looked very rough
+      
+    the group heads off to [Luthadel] (2 days) X
+      -granting 4500 experience for the wyvern encounter
+      
+      [Briar] does a sending spell to [Silvanus], offering a wooden wolf sculpture, responding: "Holding back one's anger is unhealthy, you must guide the man in the mountain to his home where he may express himself, and his path is through his captor."
+      
+      
+    
       
       
       
