--- a/data/Leeran.wiki
+++ b/data/Leeran.wiki
@@ -22,7 +22,7 @@ Items for Sale:
             -[Pantheon of the Dawn War] - 10g  
         -Pearl of Power 300g - pg 184 DM  - purchased by good
         Gemstones 
-            -3 Diamonds Pink/Yellow/Blue (worth 5000g)
+            -2 Diamonds Yellow/Blue (worth 5000g) (Pink sold to [Alas])
             -10g to 500g valued ones
             -Obsidian Shard - 10g
             -Diamond Dust (worth 300g)
